--- a/main.html
+++ b/main.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <header class="header">
-        <h1>News Website</h1>
-    </header>
+	<!-- the entire body must be written by student -->
+	<header class="header">
+		<h2>Shaw's News</h2>
+	</header>
+	<div class="main1">
+		<div class="latest-news-section">
+			<h3>Latest News Articles</h3>
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+				<li>Article 3</li>
+			</ul>
+		</div>
+		<div class="main-section">
+			<h3>Main Article</h3>
+			<h4>"Issue Of Grave Importance": Union Minister To BJP MP On Mahua Moitra Case"</h4>
+			<p>New Delhi: Information Technology minister Ashwini Vaishnaw has written to BJP MP Nishikant Dubey over the alleged parliamentary login sharing by Trinamool Congress MP Mahua Moitra, and said the matter is "of grave importance".</p>
+		</div>
+		<div class="pictorial-news-section">
+			<h2>Pictorial News</h2>
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg">
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG">
+		</div>
+	</div>
+    <script type="text/javascript" src="./script.js">
+</script>
 
-    <div class="latest-news-section">
-        <h2>Latest News</h2>
-        <ul>
-            <li><a href="#">News Item 1</a></li>
-            <li><a href="#">News Item 2</a></li>
-            <li><a href="#">News Item 3</a></li>
-        </ul>
-    </div>
-
-    <div class="pictorial-news-section">
-        <h3>Pictorial News</h3>
-        <img src="https://storage.googleapis.com/acciojob-open-file-collections/news-webpage.png" alt="Image One">
-        <img src="https://storage.googleapis.com/acciojob-open-file-collections/news-webpage.png" alt="Image Two">
-        <img src="https://storage.googleapis.com/acciojob-open-file-collections/news-webpage.png" alt="Image Three">
-    </div>
 </body>
+
 </html>
